       Canon PIXMA MX452  (EXPERIMENTAL)
       Canon PIXMA MX454  (EXPERIMENTAL)
       Canon PIXMA MX455  (EXPERIMENTAL)
       Canon PIXMA MX456  (EXPERIMENTAL)
       Canon PIXMA MX457  (EXPERIMENTAL)
       Canon PIXMA MX458  (EXPERIMENTAL)

       Canon MX520 series (EXPERIMENTAL)
       Canon PIXMA MX521  (EXPERIMENTAL)
       Canon PIXMA MX522  (EXPERIMENTAL)
       Canon PIXMA MX523  (EXPERIMENTAL)
       Canon PIXMA MX524  (EXPERIMENTAL)
       Canon PIXMA MX525  (EXPERIMENTAL)
       Canon PIXMA MX526  (EXPERIMENTAL)
       Canon PIXMA MX527  (EXPERIMENTAL)
       Canon PIXMA MX528  (EXPERIMENTAL)

       Note: Area codes as follows:
             1: Latin America
             2: USA
             3: Japan
             4: Europe/Africa
             5: UK
             6: Australia/New Zealand
             7: India/South Asia
             8: China
             (for MG series includes a trailing 0)

     - Canon dye-sublimation printers:

       Canon SELPHY CP810
       Canon SELPHY CP900

       Added back after removal in 5.2.9 release:

       Canon SELPHY CP600 *1
       Canon SELPHY CP720 
       Canon SELPHY CP780 (including improved support)
       Canon SELPHY CP800
       Canon SELPHY ES1
       Canon SELPHY ES2
       Canon SELPHY ES3
       Canon SELPHY ES20 *1
       Canon SELPHY ES30
       Canon SELPHY ES40

       Improved support:

       Canon CP-220       *1
       Canon SELPHY CP520 *1
       Canon SELPHY CP530 *1
       Canon SELPHY CP740
       Canon SELPHY CP750
       Canon SELPHY CP760
       Canon SELPHY CP770

       The intelligent CUPS spooler required to support the 
       SELPHY CP and ES models is now part of the gutenprint package.
       The USB PIDs for the following two SELPHY CP series models
       are still missing, and therefore unsupported in the spooler:

       Canon SELPHY CP520
       Canon SELPHY CP790

	*1: We have not confirmed these printers function with the new
	    backend, but they are presumed to work.
