@@ -304,12 +304,21 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon MX520 series (EXPERIMENTAL)
        Canon PIXMA MX521  (EXPERIMENTAL)
        Canon PIXMA MX522  (EXPERIMENTAL)
-       Canon PIXMA MX523  (EXPERIMENTAL)
+       Canon PIXUS MX523  (EXPERIMENTAL)
        Canon PIXMA MX524  (EXPERIMENTAL)
        Canon PIXMA MX525  (EXPERIMENTAL)
        Canon PIXMA MX526  (EXPERIMENTAL)
        Canon PIXMA MX527  (EXPERIMENTAL)
        Canon PIXMA MX528  (EXPERIMENTAL)
+
+       Canon MX920 series (EXPERIMENTAL)
+       Canon PIXMA MX922  (EXPERIMENTAL)
+       Canon PIXUS MX923  (EXPERIMENTAL)
+       Canon PIXMA MX924  (EXPERIMENTAL)
+       Canon PIXMA MX925  (EXPERIMENTAL)
+       Canon PIXMA MX926  (EXPERIMENTAL)
+       Canon PIXMA MX927  (EXPERIMENTAL)
+       Canon PIXMA MX928  (EXPERIMENTAL)
 
        Note: Area codes as follows:
              1: Latin America
